# AoC2025

./: Cargo.toml
day1/: Cargo.toml
day1/src/: lib.rs
day10/: Cargo.toml
day10/src/: lib.rs
day11/: Cargo.toml
day11/src/: lib.rs
day2/: Cargo.toml
day2/src/: lib.rs
day3/: Cargo.toml
day3/src/: lib.rs
day4/: Cargo.toml
day4/src/: lib.rs
day5/: Cargo.toml
day5/src/: lib.rs
day6/: Cargo.toml
day6/src/: lib.rs
day7/: Cargo.toml
day7/src/: lib.rs
day8/: Cargo.toml
day8/src/: lib.rs
day9/: Cargo.toml
day9/src/: lib.rs
